// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatBubble renders assistant message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      {
        "alignItems": "flex-start",
      },
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        false,
        {
          "backgroundColor": "rgba(191, 216, 192, 0.85)",
          "elevation": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.04,
          "shadowRadius": 2,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
            },
            false,
            {
              "color": "#222222",
            },
          ],
        ]
      }
    >
      Hi there! This is an assistant response with some longer text to test the bubble styling.
    </Text>
  </View>
</View>
`;

exports[`ChatBubble renders system message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      false,
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        false,
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
            },
            false,
            false,
          ],
        ]
      }
    >
      System notification message
    </Text>
  </View>
</View>
`;

exports[`ChatBubble renders user message correctly 1`] = `
<View
  style={
    [
      {
        "marginVertical": 4,
        "paddingHorizontal": 16,
      },
      {
        "alignItems": "flex-end",
      },
      false,
    ]
  }
>
  <View
    style={
      [
        {
          "borderRadius": 14,
          "maxWidth": "85%",
          "minWidth": 40,
          "paddingHorizontal": 16,
          "paddingVertical": 12,
        },
        {
          "backgroundColor": "#2E5540",
          "borderColor": "rgba(255, 255, 255, 0.05)",
          "borderWidth": 0.5,
          "elevation": 1,
          "marginRight": 12,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 1,
            "width": 0,
          },
          "shadowOpacity": 0.06,
          "shadowRadius": 3,
        },
        false,
      ]
    }
  >
    <Text
      style={
        [
          {
            "color": "#0E1116",
            "fontFamily": "Inter-Regular",
            "fontSize": 16,
            "fontWeight": "400",
            "lineHeight": 22.4,
          },
          [
            {
              "fontSize": 16,
              "lineHeight": 22,
            },
            {
              "color": "#F9F6F1",
            },
            false,
          ],
        ]
      }
    >
      Hello, this is a user message!
    </Text>
  </View>
</View>
`;
